2011-09-21 gabriel.oliveira
* Display document title only when necessary

2011-09-21 gabriel.oliveira
* Improve performance when not logged in

2011-09-21 gabriel.oliveira
* Improve "Change State" dialog, both layout and behaviour

2011-09-21 gabriel.oliveira
* Add separation between current selected language and logged in user

2011-09-21 gabriel.oliveira
* Move 'Not implemented yet' message to left side

2011-09-21 gabriel.oliveira
* Make "Refresh" button correctly reset UNG listbox checked items, asynchronously

2011-07-01 gabriel.oliveira
* Refactor to only load UNG document list when necessary

2011-07-01 gabriel.oliveira
* Remove old way of overriding preference for text editors

2011-07-01 gabriel.oliveira
* Fix css class

2011-07-01 gabriel.oliveira
* Fix unfoldDomain param and refactor search button

2011-07-01 gabriel.oliveira
* Refactor to self-close html tags

2011-07-01 gabriel.oliveira
* Fix params for Refresh button

2011-07-01 gabriel.oliveira
* Add method to return document list and javascript needed for listbox

2011-07-01 gabriel.oliveira
* Remove old way of paging

2011-07-01 gabriel.oliveira
* Implement "Change State" button

2011-07-01 gabriel.oliveira
* Refactor javascript to apply inside new ung structure

2011-07-01 gabriel.oliveira
* Refactor css to apply inside new ung structure

2011-07-01 gabriel.oliveira
* Fix unfoldDomain param, and disable reset
* Fix forgot to commit erp5_web_ung_layout form content
* Remove old listbox and add new one based on gadget

2011-06-09 gabriel.oliveira
* Force listbox page navigation to work

2011-06-08 gabriel.oliveira
* Add Xinha Editor as an option to Preferred Text Editor

2011-04-04 gabriel
* Add field to change the language of Web Site

2011-02-10 gabriel
* Add script ERP5Site_loadEmailThreadData to load the data of selected email. This script is used to open one email in the current page.