@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Fix preference dialog layout
+
+2011-09-21 gabriel.oliveira
 * Display document title only when necessary
 
 2011-09-21 gabriel.oliveira
